Set up html structure

--- a/index.html
+++ b/index.html
@@ -9,7 +9,46 @@
 </head>
 
 <body>
+    <div id="left">
+        <div class="logo-container"><img src="img/odin-lined.png" alt=""><span class="logo-text">ODIN</span></div>
+        <div class="credit">Photo by Hallie West on Unsplash</div>
+    </div>
+    <div id="right">
+        <div class="intro">
+            <h2>This is not a real online service! You know you need something like this in your life to help you
+                realize your deepest dreams.<br>Sign up <em>now</em> to get started.</h2>
+            <h2>You <em>know</em> you want to.</h2>
+        </div>
+        <form action="" method="post" id="subscription-form">
+            <div class="form-full">
+                <h2>Let's do this!</h2>
+                <div class="input-line">
+                    <label for="first-name">FIRST NAME</label>
+                    <input type="text" name="first-name" id="first-name" required>
 
+                    <label for="last-name">LAST NAME</label>
+                    <input type="text" name="last-name" id="last-name" required>
+                </div>
+                <div class="input-line">
+                    <label for="email">EMAIL</label>
+                    <input type="email" name="email" id="email" required>
+
+                    <label for="phone-number">PHONE NUMBER</label>
+                    <input type="tel" name="phone-number" id="phone-number" required>
+                </div>
+                <div class="input-line">
+                    <label for="password">PASSWORD</label>
+                    <input type="password" name="password" id="password" required>
+
+                    <label for="confirm-password">CONFIRM PASSWORD</label>
+                    <input type="password" name="confirm-password" id="confirm-password" required>
+                </div>
+            </div>
+        </form>
+        <div class="subtext">
+            <p>Already have an account? <a href="">Log in</a> </p>
+        </div>
+    </div>
 </body>
 
 </html>
