Add submit button to the form

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
                     <input type="password" name="confirm-password" id="confirm-password" required>
                 </div>
             </div>
+            <div class="form-transparent">
+                <button type="sumbit" id="form-validation">Create Account </button>>
+            </div>
         </form>
         <div class="subtext">
             <p>Already have an account? <a href="">Log in</a> </p>
