Style left section

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div id="left">
         <div class="logo-container"><img src="img/odin-lined.png" alt=""><span class="logo-text">ODIN</span></div>
-        <div class="credit">Photo by Hallie West on Unsplash</div>
+        <p class="credit">Photo by <a href="">Hallie West</a> on <a href="">Unsplash</a></p>
     </div>
     <div id="right">
         <div class="intro">
@@ -45,7 +45,7 @@
                 </div>
             </div>
             <div class="form-transparent">
-                <button type="sumbit" id="form-validation">Create Account </button>>
+                <button type="sumbit" id="form-validation">Create Account </button>
             </div>
         </form>
         <div class="subtext">
