--- a/index.html
+++ b/index.html
@@ -23,25 +23,35 @@
             <div class="form-full">
                 <h2>Let's do this!</h2>
                 <div class="input-line">
-                    <label for="first-name">FIRST NAME</label>
-                    <input type="text" name="first-name" id="first-name" required>
-
-                    <label for="last-name">LAST NAME</label>
-                    <input type="text" name="last-name" id="last-name" required>
+                    <div class="input">
+                        <label for="first-name">FIRST NAME</label>
+                        <input type="text" name="first-name" id="first-name" required>
+                    </div>
+                    <div class="input">
+                        <label for="last-name">LAST NAME</label>
+                        <input type="text" name="last-name" id="last-name" required>
+                    </div>
                 </div>
                 <div class="input-line">
-                    <label for="email">EMAIL</label>
-                    <input type="email" name="email" id="email" required>
-
-                    <label for="phone-number">PHONE NUMBER</label>
-                    <input type="tel" name="phone-number" id="phone-number" required>
+                    <div class="input">
+                        <label for="email">EMAIL</label>
+                        <input type="email" name="email" id="email" required>
+                    </div>
+                    <div class="input">
+                        <label for="phone-number">PHONE NUMBER</label>
+                        <input type="tel" name="phone-number" id="phone-number" required>
+                    </div>
                 </div>
                 <div class="input-line">
-                    <label for="password">PASSWORD</label>
-                    <input type="password" name="password" id="password" required>
+                    <div class="input">
 
-                    <label for="confirm-password">CONFIRM PASSWORD</label>
-                    <input type="password" name="confirm-password" id="confirm-password" required>
+                        <label for="password">PASSWORD</label>
+                        <input type="password" name="password" id="password" required>
+                    </div>
+                    <div class="input">
+                        <label for="confirm-password">CONFIRM PASSWORD</label>
+                        <input type="password" name="confirm-password" id="confirm-password" required>
+                    </div>
                 </div>
             </div>
             <div class="form-transparent">
