Finish right side set up
Add a Client side password confirmation logic

--- a/index.html
+++ b/index.html
@@ -25,43 +25,48 @@
                 <div class="input-line">
                     <div class="input">
                         <label for="first-name">FIRST NAME</label>
-                        <input type="text" name="first-name" id="first-name" required>
+                        <input type="text" name="first-name" id="first-name" placeholder="Larry" required>
                     </div>
                     <div class="input">
                         <label for="last-name">LAST NAME</label>
-                        <input type="text" name="last-name" id="last-name" required>
+                        <input type="text" name="last-name" id="last-name" placeholder="Page" required>
                     </div>
                 </div>
                 <div class="input-line">
                     <div class="input">
                         <label for="email">EMAIL</label>
-                        <input type="email" name="email" id="email" required>
+                        <input type="email" name="email" id="email" placeholder="larry@google.com " required>
                     </div>
                     <div class="input">
                         <label for="phone-number">PHONE NUMBER</label>
-                        <input type="tel" name="phone-number" id="phone-number" required>
+                        <input type="tel" name="phone-number" id="phone-number" placeholder="+01542145875 " required>
                     </div>
                 </div>
                 <div class="input-line">
                     <div class="input">
 
                         <label for="password">PASSWORD</label>
-                        <input type="password" name="password" id="password" required>
+                        <input type="password" name="password" id="password" onchange="check_pass();" required>
                     </div>
                     <div class="input">
                         <label for="confirm-password">CONFIRM PASSWORD</label>
-                        <input type="password" name="confirm-password" id="confirm-password" required>
+                        <input type="password" name="confirm-password" id="confirm-password" onchange="check_pass();"
+                            required>
                     </div>
                 </div>
+                <p id="prompt">hi</p>
+
             </div>
             <div class="form-transparent">
-                <button type="sumbit" id="form-validation">Create Account </button>
+                <button type="submit" id="form-validation" disabled>Create Account </button>
             </div>
         </form>
         <div class="subtext">
             <p>Already have an account? <a href="">Log in</a> </p>
         </div>
     </div>
+    <script src="script.js"></script>
+
 </body>
 
 </html>
